--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QR Hunter</string>
+    <string name="title_activity_map_demo">MapDemo</string>
 </resources>
