对profile进行了修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QR Hunter</string>
     <string name="title_activity_map_demo">MapDemo</string>
+    <string name="title_activity_map_demo2">MapDemo2</string>
 </resources>
